--- a/wp-content/themes/sage-master/assets/styles/common/_global.scss
+++ b/wp-content/themes/sage-master/assets/styles/common/_global.scss
@@ -21,10 +21,12 @@ h1,h2,h3,h4,h5, h6, button {
 }
 .block {
   display: block;
-  padding: 30px 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .section {
-  padding: 60px 0;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .photo-container {
   position: relative;
@@ -95,5 +97,30 @@ form {
     color: #000;
     width: auto;
     margin-top: 10px;
+  }
+}
+.presskit {
+  background: url('../images/dates.png') no-repeat;
+  &:after {
+    content: ' ';
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.7);
+  }
+  .presskit-content {
+    position: relative;
+    z-index: 2;
+  }
+  .section {
+    padding: 30px 0;
+  }
+  .section-title {
+    border-bottom: 1px solid #fff;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
   }
 }
